Add categories feature and update schema
Introduces Category model to Prisma schema, adds migrations for categories and category descriptions, and updates Workout to support category relations. Implements controllers, routes, and validators for categories and stats, adds seed and example scripts, updates documentation, and removes old generated Prisma files. Also adds dotenv dependency and related environment setup.

--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "nodemon src/app.js",
     "start": "node src/app.js",
-    "prisma": "prisma"
+    "prisma": "prisma",
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@prisma/client": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.19.2"
   },
   "devDependencies": {
